--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,8 +6,8 @@
     "lib": ["dom", "dom.iterable", "esnext"],
     "skipLibCheck": true,
     "target": "es5",
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedLocals": false, 
+    "noUnusedParameters": false,
     "noEmit": true,
     "paths": {
       "@portal/*": ["src/*"],
