feat: create search services

--- a/codegen.yaml
+++ b/codegen.yaml
@@ -16,6 +16,7 @@ generates:
       - ./src/**/queries.ts
       - ./src/**/mutations.ts
       - ./src/**/fragments/*.ts
+      - ./src/searches/*.ts
     config:
       nonOptionalTypename: true
       avoidOptionals:
