--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.10",
+    "@saleor/macaw-ui": "^0.6.0",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.24",
-    "@types/react": "^18.0.5",
-    "@types/react-dom": "^18.0.1",
+    "classnames": "^2.3.1",
     "graphql": "^16.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -55,6 +55,8 @@
     "@graphql-codegen/typescript": "^2.4.8",
     "@graphql-codegen/typescript-operations": "^2.3.5",
     "@graphql-codegen/typescript-react-apollo": "^3.2.14",
+    "@types/react": "^17.0.5",
+    "@types/react-dom": "^17.0.4",
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "autoprefixer": "^10.4.4",
@@ -70,7 +72,6 @@
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
     "react-app-rewire-alias": "^1.1.7",
-    "react-app-rewired": "^2.2.1",
-    "tailwindcss": "^3.0.24"
+    "react-app-rewired": "^2.2.1"
   }
 }
