--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/node": "^17.0.24",
     "boolean": "^3.2.0",
     "classnames": "^2.3.1",
+    "draft-js": "^0.11.7",
     "graphql": "^16.3.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
@@ -58,6 +59,7 @@
     "@graphql-codegen/typescript": "^2.4.8",
     "@graphql-codegen/typescript-operations": "^2.3.5",
     "@graphql-codegen/typescript-react-apollo": "^3.2.14",
+    "@types/draft-js": "^0.11.9",
     "@types/lodash": "^4.14.182",
     "@types/react": "^17.0.5",
     "@types/react-dom": "^17.0.4",
