--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/node": "^17.0.24",
+    "apollo-upload-client": "^17.0.0",
     "boolean": "^3.2.0",
     "classnames": "^2.3.1",
     "draft-js": "^0.11.7",
