--- a/package.json
+++ b/package.json
@@ -78,8 +78,8 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "postcss": "^8.4.12",
     "prettier": "^2.6.2",
-    "react-scripts": "5.0.1",
     "react-app-rewire-alias": "^1.1.7",
-    "react-app-rewired": "^2.2.1"
+    "react-app-rewired": "^2.2.1",
+    "react-scripts": "5.0.1"
   }
 }
