--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "classnames": "^2.3.1",
     "draft-js": "^0.11.7",
     "graphql": "^16.3.0",
+    "i18next": "^21.10.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-i18next": "^11.18.6",
     "react-router-dom": "^6.3.0",
     "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
