--- a/package.json
+++ b/package.json
@@ -4,19 +4,19 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.7.0",
-    "@date-io/date-fns": "^2.16.0",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@mui/icons-material": "^5.10.9",
     "@mui/lab": "^5.0.0-alpha.85",
     "@mui/material": "^5.10.10",
+    "@mui/x-date-pickers": "^5.0.5",
     "apollo-upload-client": "^17.0.0",
     "boolean": "^3.2.0",
     "classnames": "^2.3.1",
-    "date-fns": "^2.0.0-beta.5",
     "draft-js": "^0.11.7",
     "graphql": "^16.6.0",
     "i18next": "^21.10.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
