--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "apollo-upload-client": "^17.0.0",
     "boolean": "^3.2.0",
     "classnames": "^2.3.1",
+    "date-fns": "^2.29.3",
     "draft-js": "^0.11.7",
     "graphql": "^16.6.0",
     "i18next": "^21.10.0",
