--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@mui/lab": "^5.0.0-alpha.120",
     "@mui/material": "^5.11.10",
     "@mui/x-date-pickers": "^5.0.5",
+    "@sentry/react": "^7.43.0",
+    "@sentry/tracing": "^7.43.0",
     "apollo-upload-client": "^17.0.0",
     "boolean": "^3.2.0",
     "classnames": "^2.3.1",
