--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "classnames": "^2.3.1",
     "date-fns": "^2.29.3",
     "dayjs": "^1.11.7",
+    "downshift": "^6.1.7",
     "draft-js": "^0.11.7",
     "graphql": "^16.6.0",
     "i18next": "^21.10.0",
