--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
+    "react-json-pretty": "^2.2.0",
     "react-router-dom": "^6.4.2",
     "react-toastify": "^9.1.1",
     "typescript": "^4.8.4",
