--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
     "react-json-pretty": "^2.2.0",
     "react-router-dom": "^6.4.2",
     "react-toastify": "^9.1.1",
-    "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,25 +37,12 @@
     "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "build-types": "graphql-codegen",
-    "fetch-schema": "graphql-codegen --config ./fetch-schema.yaml && node scripts/build-schema.js"
+    "generate": "graphql-codegen --config codegen.yaml --require dotenv/config -w"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
     ]
   },
   "devDependencies": {
@@ -79,6 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^5.19.0",
     "@typescript-eslint/parser": "^5.19.0",
     "autoprefixer": "^10.4.4",
+    "dotenv": "^16.3.1",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-standard": "^16.0.3",
