--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "prettier": "^2.6.2",
     "react-app-rewire-alias": "^1.1.7",
     "react-app-rewired": "^2.2.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "typescript": "^5.1.6"
   },
   "browserslist": {
     "production": [
