--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,15 +4,18 @@
     "esModuleInterop": true,
     "jsx": "preserve",
     "lib": ["dom", "dom.iterable", "esnext"],
+    "types": ["vite/client"],
     "skipLibCheck": true,
-    "target": "es5",
+    "target": "esnext",
+    "module": "esnext",
+    "moduleResolution": "node",
+    "resolveJsonModule": true,
     "noUnusedLocals": false, 
     "noUnusedParameters": false,
     "noEmit": true,
     "paths": {
       "@portal/*": ["src/*"],
     },
-    "resolveJsonModule": true,
   },
   "exclude": ["node_modules"]
 }
