--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react-json-pretty": "^2.2.0",
     "react-router-dom": "^6.14.2",
     "react-toastify": "^9.1.3",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "ws": "^8.13.0"
   },
   "scripts": {
     "start": "vite",
